[package]
name = "rdrop"
description = "Terminal dropdown utils for Hyprland (based on hyprctl)"
license = "GPL-3.0"
authors = ["Luca Fulgenzi <mail@lucafulgenzi.cloud>"]
homepage = "https://github.com/lucafulgenzi/rdrop"
repository = "https://github.com/lucafulgenzi/rdrop"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
twelf = { version="0.11.0", features = ["yaml"]}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
dirs = "6.0.0"
env_logger = "0.11.8"
